@@ -150,6 +150,7 @@ In Wagtail 2.16, we introduced support for Windows High Contrast mode (WHCM). Th
  * Ensure consistent sidebar icon position whether expanded or collapsed (Scott Cranfill)
  * Avoid redirects import error if the file had lots of columns (Jaap Roes)
  * Resolve accessibility and styling issues with the expanding status panel (Sage Abdullah)
+ * Avoid 503 `AttributeError` when an empty search param `q=` is combined with other filters in the Images index view (Paritosh Kabra)
 
 
 ## Upgrade considerations
